syntax = "proto2";
package setter;

option go_package = "github.com/guader/protogen/pb/setter";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FileOptions {
    optional FileOptions fileOptions = 1330; // Extension number not registered yet.
}

extend google.protobuf.MessageOptions {
    optional MessageOptions messageOptions = 1330; // Extension number not registered yet.
}

extend google.protobuf.FieldOptions {
    optional FieldOptions fieldOptions = 1330; // Extension number not registered yet.
}

message FileOptions {
    optional bool enable = 1;
    optional string suffix = 2;
}

message MessageOptions {
    optional bool disable = 1;
}

message FieldOptions {
    optional bool disable = 1;
}